--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 .main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   position: relative;
 width: 1440px;
