--- a/src/components/navbar/Nav.css
+++ b/src/components/navbar/Nav.css
@@ -8,7 +8,8 @@
   position: sticky;
   top: 0;
   z-index: 100;
-  width: 90.3%;
+  width: 100%;
+  box-shadow: 0px 2px 12px #333;
 }
 .logo span {
   font-weight: 700;
