--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -10,17 +10,21 @@ transform: matrix(1, 0, 0, 1, 0, 0);
     justify-content: end;
     color: #fff;
     align-items: end;
-    padding: 40px;
+    padding: 10rem 3rem;
+    gap: 7rem;
 }
 .content{
     display: flex;
     flex-direction: column;
     align-items: end;
+    gap: 4rem;
 }
 .hero-text h1{
+    font-family: serif;
     font-size:4rem;
 }
 .hero-text p{
+    font-family: serif;
     font-size: 2.5rem;
     width: 70%;
 }
