--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,6 +1,6 @@
 .cards-main {
   min-height: 100vh;
- width: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,14 +19,13 @@
   padding: 10px;
 }
 .cards-wrapper {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
   width: 80%;
   overflow: hidden;
   padding: 30px;
 }
 .cards {
-  
   display: flex;
   gap: 25px;
 }
@@ -40,16 +39,16 @@
   padding: 30px;
   box-shadow: #12273d29 0 0px 13px;
 }
-.car-img{
-    /* height: 160px; */
-    background-size: cover;
+.car-img {
+  /* height: 160px; */
+  background-size: cover;
 }
 .car-name h3 {
   color: #741906;
   font-size: 20px;
 }
-.description{
-    font-size: 12px;
+.description {
+  font-size: 12px;
 }
 .add-cart-btn {
   display: flex;
@@ -77,7 +76,8 @@
   font-size: 20px;
 }
 .add-btn {
-    font-size: 20px;
+  cursor: pointer;
+  font-size: 20px;
   background-color: #741906;
   padding: 8px 15px;
   border: none;
@@ -93,30 +93,29 @@
 }
 
 .controls {
- 
   width: 90%;
   display: flex;
   justify-content: space-between;
   z-index: 100;
- position: relative;
+  position: relative;
 }
-.left { 
-    position: absolute;
-    background-color: #741906;
-    color: #fff;
-    border: none;
-font-size: 18px;
+.left {
+  position: absolute;
+  background-color: #741906;
+  color: #fff;
+  border: none;
+  font-size: 18px;
   padding: 15px;
   border-radius: 50%;
   bottom: 250px;
 }
 .right {
-    right: 0px;
-    position: absolute;
-      background-color: #741906;
-    color: #fff;
-    border: none;
-font-size: 18px;
+  right: 0px;
+  position: absolute;
+  background-color: #741906;
+  color: #fff;
+  border: none;
+  font-size: 18px;
   padding: 15px;
   border-radius: 50%;
   bottom: 250px;
