--- a/src/components/navbar/Nav.css
+++ b/src/components/navbar/Nav.css
@@ -1,24 +1,31 @@
 .nav {
   top: 0;
-  background: linear-gradient(
-      90deg,
-      rgba(0, 9, 26, 0.45) 32.41%,
-      rgba(0, 0, 0, 0) 65.08%
-    ),
-    url(../img/Background.png);
+  background: transparent;
+    background-size: cover;
   display: flex;
   justify-content: space-between;
   font-size: 28px;
   color: #fff;
   padding: 20px 70px;
   z-index: 100;
-  width: 86.03%;
-  box-shadow: 0px 2px 12px #333; 
+  width: 68.03%;
   position: fixed;
 }
 .nav.fixed{
   background-color: #ff2b01;
   transition: .3s ease-in-out;
+  background-color: #fff;
+  
+}
+.navbar {
+  background-color: transparent;
+  transition: background-color 0.3s ease-in-out; 
+}
+
+.navbar.scrolled {
+  background-color: #fff;
+  color: #12273D;
+  box-shadow: 0px 2px 12px #33333362; 
 }
 .logo span {
   font-weight: 700;
@@ -37,6 +44,9 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 33px;
+}
+.navbar.scrolled .links li a{
+  color: #12273D;
 }
 .links-cart {
   display: flex;
