--- a/src/components/navbar/Nav.css
+++ b/src/components/navbar/Nav.css
@@ -57,7 +57,9 @@
   padding: 4px 8px;
   border-radius: 9px;
 }
-
+.active .links li a{
+  color: #fff;
+}
 .cart {
   display: flex;
   font-size: 32px;
