--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -26,6 +26,7 @@
   padding: 30px;
 }
 .cards {
+  width: 100%;
   display: flex;
   gap: 25px;
 }
@@ -119,4 +120,23 @@
   padding: 15px;
   border-radius: 50%;
   bottom: 250px;
+}
+.circles {
+  display: flex;
+  gap: 20px;
+ 
+  margin: auto;
+}
+
+.circles:hover {
+  cursor: pointer;
+}
+.circleA {
+  height: 25px;
+  width: 25px;
+  background-color: #741906;
+}
+.circlen {
+ background-color: #12273d;
+  border-radius: 50%;
 }
