--- a/src/components/navbar/Nav.css
+++ b/src/components/navbar/Nav.css
@@ -1,31 +1,40 @@
 .nav {
   top: 0;
   background: transparent;
-    background-size: cover;
+  background-size: cover;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   font-size: 28px;
   color: #fff;
   padding: 20px 70px;
   z-index: 100;
-  width: 68.03%;
+  width: 75.6%;
   position: fixed;
 }
-.nav.fixed{
+.nav.fixed {
   background-color: #ff2b01;
-  transition: .3s ease-in-out;
+  transition: 0.3s ease-in-out;
   background-color: #fff;
-  
 }
 .navbar {
   background-color: transparent;
-  transition: background-color 0.3s ease-in-out; 
+  transition: background-color 0.3s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .navbar.scrolled {
   background-color: #fff;
-  color: #12273D;
-  box-shadow: 0px 2px 12px #33333362; 
+  color: #12273d;
+  box-shadow: 0px 2px 12px #33333362;
+}
+.logo {
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  right: 10%;
+}
+.logo:hover {
+  color: #741906;
+  scale: 1.3;
 }
 .logo span {
   font-weight: 700;
@@ -37,6 +46,7 @@
   list-style: none;
   text-align: center;
 }
+
 .links li a {
   text-decoration: none;
   color: #fff;
@@ -45,8 +55,15 @@
   font-size: 24px;
   line-height: 33px;
 }
-.navbar.scrolled .links li a{
-  color: #12273D;
+a:hover {
+  cursor: pointer;
+  color: #741906;
+}
+.links li:active {
+  color: #fff;
+}
+.navbar.scrolled .links li a {
+  color: #12273d;
 }
 .links-cart {
   display: flex;
@@ -57,7 +74,7 @@
   padding: 4px 8px;
   border-radius: 9px;
 }
-.active .links li a{
+.active .links li a {
   color: #fff;
 }
 .cart {
