--- a/src/components/navbar/Nav.css
+++ b/src/components/navbar/Nav.css
@@ -65,6 +65,10 @@ a:hover {
 .navbar.scrolled .links li a {
   color: #12273d;
 }
+.navbar.scrolled .cart svg{
+  color: #067415;
+}
+
 .links-cart {
   display: flex;
   gap: 20px;
@@ -102,4 +106,24 @@ a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.nav-mini-bar {
+    display: none;
+    cursor: pointer;
+}
+.dorp-navbar {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    right: 4px;
+    top: 74px;
+}
+.drop-links{
+  background-color: #55555588;
+  list-style: none;
+  border-radius: 9px;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  display: none;
 }
