--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -2,6 +2,7 @@
 height: 100vh;
 background: linear-gradient(90deg, rgba(0, 9, 26, 0.45) 32.41%, rgba(0, 0, 0, 0) 65.08%), url(../img/CTA-BG.png);
 transform: matrix(1, 0, 0, 1, 0, 0);
+background-size: cover;
 }
 .service{
     display: flex;
