--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -25,12 +25,18 @@
   overflow: hidden;
   padding: 30px;
 }
+.cards-container {
+  width: 100%;
+  overflow: hidden;
+}
 .cards {
-  display: flex;
-  /* transition: transform 0.1s ease; */
+ display: flex;
   width: 100%;
   display: flex;
   gap: 25px;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease;
 }
 .card {
   width: 355px;
@@ -42,6 +48,10 @@
   padding: 30px;
   box-shadow: #12273d29 0 0px 13px;
   cursor: grab;
+}
+.active-card{
+  border: 1px solid #64010159;
+    box-shadow: 0px 0px 2px #ff0000;
 }
 .car-img {
   /* height: 160px; */
@@ -135,9 +145,13 @@
   cursor: pointer;
 }
 .circleA {
-  height: 25px;
-  width: 25px;
-  background-color: #741906;
+  height: 20px;
+  width: 20px;
+  background-color: #5a5a5a3d;
+  border-radius: 50%;
+}
+.active-circle{
+background-color: #6e0505;
 }
 .circlen {
   background-color: #12273d;
