--- a/src/components/navbar/Nav.css
+++ b/src/components/navbar/Nav.css
@@ -3,12 +3,12 @@
   background: transparent;
   background-size: cover;
   display: flex;
-  justify-content: space-around;
+gap: 30%;
   font-size: 28px;
   color: #fff;
   padding: 20px 70px;
   z-index: 100;
-  width: 75.6%;
+  width: 80.6%;
   position: fixed;
 }
 .nav.fixed {
@@ -74,9 +74,10 @@ a:hover {
   gap: 20px;
 }
 .active {
-  background-color: #741906;
-  padding: 4px 8px;
-  border-radius: 9px;
+    display: inherit;
+    background-color: #741906;
+    padding: 12px 25px;
+    width: 100%;
 }
 .active .links li a {
   color: #fff;
@@ -110,6 +111,7 @@ a:hover {
 .nav-mini-bar {
     display: none;
     cursor: pointer;
+    z-index: 1000;
 }
 .dorp-navbar {
     position: absolute;
@@ -118,12 +120,14 @@ a:hover {
     right: 4px;
     top: 74px;
 }
-.drop-links{
-  background-color: #55555588;
-  list-style: none;
-  border-radius: 9px;
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-  display: none;
+.drop-links {
+    background-color: #000000b5;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    display: none;
+    height: 95vh;
+    width: 384px;
+    color: #fff;
+    padding-top: 14rem;
 }
