--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
   background: #fafafa;
   overflow: hidden;
 }
-.content {
+.container {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -86,7 +86,8 @@ code {
     grid-template-columns: 1fr;
   }
   .content {
-    gap: 8rem;
+    gap: 2rem;
+    align-items: center;
   }
   .about-content {
     display: flex;
@@ -166,7 +167,8 @@ code {
   font-size:16%;
 }
 .cards-main {
-      min-height: 143vh;
+      min-height: 100vh;
+      margin-top: 580px;
 }
 .cars-gallery {
   height: 100vh;
