--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -27,7 +27,7 @@
   justify-content: center;
   align-items: center;
   color: #444;
-  background-color: #ebd8b8;
+  background-color: #ffffff;
   width: 55%;
 }
 .testimonials-card .text {
