--- a/src/components/Logos/Logos.css
+++ b/src/components/Logos/Logos.css
@@ -1,13 +1,10 @@
 .logos {
   width: 100%;
-  height: 350px;
+  height: 550px;
   background-color: #dfdbcd;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.logos img {
-  filter: brightness(0);
-  opacity: 0.5;
+  gap: 4rem;
+  flex-wrap: wrap;
 }
