--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -36,7 +36,7 @@
   gap: 25px;
   justify-content: center;
   align-items: center;
-  transition: transform 0.3s ease;
+  /* transition: transform 0.3s ease; */
   transform: translate(0px, 0px);
 }
 .card {
