--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,5 +1,5 @@
 .hero {
-  /* height: 100vh; */
+  height: 100vh;
   background: linear-gradient(
       90deg,
       rgba(0, 9, 26, 0.45) 32.41%,
@@ -16,7 +16,7 @@
   justify-content: end;
   color: #fff;
   align-items: end;
-  padding: 14rem 12rem;
+  padding: 12rem 6rem;
   gap: 7rem;
 }
 .content {
