--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,10 +1,54 @@
-.cards-main {
-  min-height: 100vh;
-  width: 95%;
+.shop-container {
+  width: 90%;
+  overflow: hidden;
+  padding-bottom: 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+
   justify-content: center;
+}
+.carousel {
+  margin-top: 8rem;
+  cursor: grab;
+}
+.inner-carousel {
+  display: flex;
+  gap: 3rem;
+}
+.carousel-container {
+  margin-bottom: 5rem;
+}
+.card {
+  min-height: 25rem;
+  min-width: 20rem;
+  padding: 40px 20px;
+}
+.car-img img {
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+.card-indicators {
+  display: flex;
+  gap: 1rem;
+}
+.indicator {
+  background-color: #8e8f8e5d;
+  border-radius: 50%;
+  width: 1.5rem;
+}
+.indicator.active {
+  border-radius: 6px;
+  display: inherit;
+  background-color: #741906;
+  padding: 12px 25px;
+  width: 1.5rem;
+  transition: 0.2s ease-in-out;
+}
+
+/* ===============CARSOUL============== */
+.cards-main {
 }
 .cards-title {
   position: relative;
