--- a/src/components/navbar/Nav.css
+++ b/src/components/navbar/Nav.css
@@ -10,6 +10,7 @@
   z-index: 100;
   width: 1440px;
   position: fixed;
+  transition: all .3s ease-in-out;
 }
 .nav.fixed {
   background-color: #ff2b01;
@@ -114,6 +115,7 @@ a:hover {
   display: none;
   cursor: pointer;
   z-index: 1000;
+   
 }
 .dorp-navbar {
   position: absolute;
@@ -121,15 +123,24 @@ a:hover {
   flex-direction: column;
   right: 4px;
   top: 74px;
+ transition: all .3s ease-in-out; 
+ transform: translateX(1242px);
 }
 .drop-links {
   background-color: #000000b5;
   list-style: none;
   display: flex;
   flex-direction: column;
-  display: none;
   height: 95vh;
   width: 384px;
   color: #fff;
   padding-top: 14rem;
+ 
+  transition: transform 0.3s ease-in-out;
 }
+
+
+ .hide {
+    display: block;
+    transform: translateX(1px);
+  }
