--- a/src/components/aboutUs/aboutus.css
+++ b/src/components/aboutUs/aboutus.css
@@ -1,6 +1,6 @@
 .about-us {
   display: flex;
-  flex-direction: column;
+  padding: 6rem 0;
   align-items: start;
 }
 
@@ -23,6 +23,7 @@
 }
 .about-content {
   display: flex;
+  flex-direction: column;
   padding: 0 3rem;
   text-align: start;
   font-size: 26px;
